// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ignore deleted keys when ignoreDeletedKeys is true 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`current\` | active | changed |
| \`new\` | upcoming |  |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;

exports[`should not ignore deleted keys when ignoreDeletedKeys is false 1`] = `
"Heads up! Looks like there are some differences between your two Locize versions.

### \`en-US/translation\`

| Key | \`latest\` | \`production\` |
| --- | --- | --- |
| \`current\` | active | changed |
| \`new\` | upcoming |  |
| \`old\` |  | gone |

_Generated by [Locize Diff](https://github.com/Widen/locize-diff)._"
`;
